# qualcomm_patrol

./: Dockerfile  entrypoint.sh  push_component.sh
src/amcl/launch/: pengo_amcl.launch
src/base_link_publisher/: CMakeLists.txt  package.xml
src/base_link_publisher/src/: base_link_publisher_node.py
src/camera_link_publisher/: CMakeLists.txt  package.xml
src/camera_link_publisher/src/: camera_link_publisher_node.py
src/kobuki_driver/kobuki/enable_auto_docking_cmd/: CMakeLists.txt  package.xml
src/kobuki_driver/kobuki/enable_auto_docking_cmd/param/: enable_auto_docking_cmd.yaml
src/kobuki_driver/kobuki/enable_auto_docking_cmd/src/: enable_auto_docking_cmd_node.cpp
src/kobuki_driver/kobuki/kobuki_launch/launch/: kobuki.launch
src/kobuki_driver/kobuki/kobuki_launch/launch/includes/: mobile_base.launch.xml
src/kobuki_driver/kobuki/kobuki_node/param/: base.yaml
src/laser_link_publisher/: CMakeLists.txt  package.xml
src/laser_link_publisher/src/: laser_link_publisher_node.py
src/map_server/: CMakeLists.txt
src/map_server/example-map/: map.pgm  map.yaml
src/map_server/launch/: map_server.launch  map_view.launch
src/map_server/maps_cogniteam/: cogniteam_map_view.pgm  cogniteam_map_view.yaml  cogniteam_office.pgm  cogniteam_office.yaml
src/map_server/src/: main.cpp
src/move_base/turtlebot_navigation/: .project
src/move_base/turtlebot_navigation/launch/includes/: move_base.launch.xml
src/move_base/turtlebot_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_costmap_params_without_map_static_layer.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/move_base/turtlebot_navigation/param/teb_planner/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/patrol_manager/: CMakeLists.txt  package.xml
src/patrol_manager/include/patrol_manager/: MoveBaseController.h  PatrolManager.h
src/patrol_manager/launch/: patrol_manager.launch
src/patrol_manager/src/: MoveBaseController.cpp  patrol_manager_node.cpp
src/patrol_manager/waypoints/: waypoints.yaml
src/robot_setup/: CMakeLists.txt  package.xml
src/robot_setup/launch/: qualcomm_patrol.launch  robot_setup.launch  slam_gmapping.launch  urg_lidar.launch
src/waypoints_navigation/turtlebot_laser_navigation/: CMakeLists.txt  package.xml
src/waypoints_navigation/turtlebot_laser_navigation/include/turtlebot_laser_navigation/: MoveBaseController.h  WaypointDriver.h
src/waypoints_navigation/turtlebot_laser_navigation/launch/: nimbus.launch
src/waypoints_navigation/turtlebot_laser_navigation/src/: MoveBaseController.cpp  WaypointDriver.cpp  waypoint_driver_node.cpp  waypoints_print.py
src/waypoints_navigation/turtlebot_laser_navigation/waypoints/: PTK1_floor2.yaml  dock.yaml  robot_demo.yaml  temp_path.yaml  temp_path_10.yaml  temp_path_20.yaml  temp_path_30.yaml  temp_path_40.yaml  temp_path_BT_10.yaml  temp_path_dual_bss.yaml  temp_path_test.yaml  test.yaml  test_2.yaml
src/waypoints_navigation/waypoints_markers_publishers/: CMakeLists.txt  package.xml
src/waypoints_navigation/waypoints_markers_publishers/src/: waypoints_markers_publishers_node.cpp
